k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: client
    app.kubernetes.io/part-of: chat-app
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chat-app
      app.kubernetes.io/component: client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chat-app
        app.kubernetes.io/component: client
        app.kubernetes.io/part-of: chat-app
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: chat-app-client
          image: chat-app-client:1.0.0
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 256Mi
              memory: 128Mi
            limits:
              cpu: 500m
              ephemeral-storage: 512Mi
              memory: 256Mi
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      restartPolicy: Always
