k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: client
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: client
