k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: database
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: database
