k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: server
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30001
