k8s/client-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client
  namespace: default
  labels:
    app.kubernetes.io/name: chat-app
    app.kubernetes.io/component: client
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "app.docker.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: compress
      backendRefs:
        - name: client
          port: 80
          weight: 1
